// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cannot verify renders the page 1`] = `
<Fragment>
  <BackButton />
  <Title>
    We can't verify this organization
  </Title>
  <Lead>
    <Trans
      i18nKey="pages.employersCannotVerify.companyNameLabel"
      tOptions={
        Object {
          "employerDba": "Company Name",
        }
      }
    />
    <br />
    <Trans
      i18nKey="pages.employersCannotVerify.employerIdNumberLabel"
      tOptions={
        Object {
          "employerFein": "11-111111",
        }
      }
    />
  </Lead>
  <p>
    <Trans
      components={
        Object {
          "dor-phone-link": <a
            href="tel:(617) 466‑3950"
          />,
          "learn-more-link": <a
            href="https://www.mass.gov/pfml-verify-employer"
            rel="noopener"
            target="_blank"
          />,
        }
      }
      i18nKey="pages.employersCannotVerify.body"
    />
  </p>
</Fragment>
`;

exports[`cannot verify renders the page 2`] = `
Array [
  <strong
    key="strong-0"
  >
    Organization:
  </strong>,
  " Company Name",
]
`;

exports[`cannot verify renders the page 3`] = `
Array [
  <strong
    key="strong-0"
  >
    Employer ID number (EIN):
  </strong>,
  " 11-111111",
]
`;

exports[`cannot verify renders the page 4`] = `
Array [
  "We can't verify this account because this organization hasn't submitted contributions through MassTaxConnect. Call the Department of Revenue at ",
  <a
    href="tel:(617) 466‑3950"
    key="1"
  >
    (617) 466‑3950
  </a>,
  " to make arrangements to submit contributions. Once you do that, you'll be able to review leave applications on the next business day. Learn more about ",
  <a
    href="https://www.mass.gov/pfml-verify-employer"
    key="3"
    rel="noopener"
    target="_blank"
  >
    verifying your account
  </a>,
  " on Mass.gov.",
]
`;
